--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@ and are not intended to imply an endorsement by the organization.
 <li>Richard Esteban Martinez Hughes, MIT Class of 2008
 <li>Richo Healey, Stripe
 <li>Rick Altherr, Google <!-- from GitHub user kc8apf -->
+<li><a href="https://twitter.com/rileyjshaw">Riley Shaw</a>, Khan Academy <!-- from GitHub user rileyjshaw -->
 <li>Robby Kraft
 <li><a href="https://twitter.com/robbyrussell">Robby Russell</a>, <a href="https://www.planetargon.com/">Planet Argon</a><li><a href="http://gaal.co">Robert Gaal, TQ</a> <!-- from GitHub user robertgaal -->
 <li><a href="https://twitter.com/robgalanakis">Robert Galanakis</a>, CTO, Cozy <!-- from GitHub user rgalanakis -->
